--- a/free/index.html
+++ b/free/index.html
@@ -78,7 +78,7 @@
          <div class="card">
              <div class="card-body">
                  <h2 class="card-title text-center"><i class="fas fa-envelope"></i> Free Emails Sender</h2>
-                 <form id="emailForm" action="https://lmadminpanel.000webhostapp.com/mailtd/free.php" method="post">
+                 <form id="emailForm" action="https://adminpanel.d-d.pw/mailtd/free.php" method="post">
                      <div class="form-group">
                     <label for="fromName"><i class="fas fa-user"></i> Sender Name:</label>
                     <input type="text" class="form-control" id="fromName" name="fromName" required oninput="validateInput('fromName', 'fromNameWarning')">
