--- a/free/index.html
+++ b/free/index.html
@@ -47,6 +47,7 @@
     </style>
 </head>
 <body>
+<div class="container mt-0 mb-0">
 <script type="text/javascript">
 	atOptions = {
 		'key' : '5cafc4d687c66778ffc3dd0d101d1def',
@@ -56,7 +57,7 @@
 		'params' : {}
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/5cafc4d687c66778ffc3dd0d101d1def/invoke.js"></scr' + 'ipt>');
-</script>
+</script></div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html"><i class="fas fa-campground"></i> The Camp22</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,6 +84,7 @@
         <strong>Premium Version Coming Soon!</strong> Join here for updates.
         <button class="btn btn-warning ml-2" onclick="window.location.href='https://t.me/thecamp22'">Join Now</button>
     </div>
+    <div class="container mt-0 mb-0">
 <script type="text/javascript">
 	atOptions = {
 		'key' : '5cafc4d687c66778ffc3dd0d101d1def',
@@ -92,7 +94,7 @@
 		'params' : {}
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/5cafc4d687c66778ffc3dd0d101d1def/invoke.js"></scr' + 'ipt>');
-</script>
+</script></div>
     <div class="container">
          <div class="card">
              <div class="card-body">
